@@ -2,6 +2,7 @@ nplan (0.32~17.10.2) UNRELEASED; urgency=medium
 
   * Fix syntax for IPv6 addresses in doc. (LP: #1735317)
   * doc: routes are not top-level but per-interface. (LP: #1726695)
+  * Implement bridge port-priority parameter. (LP: #1735821)
 
  -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Mon, 26 Feb 2018 10:24:47 -0500
 
